views: don't use padding pre-Harmony either

This padding was already removed for Harmony dialogs by
<https://chromium-review.googlesource.com/c/chromium/src/+/700400>, but it seems
unnecessary in pre-Harmony dialogs either - see the screenshots on the bug for
an example.

Bug: 772799
Change-Id: I1af53f1cdb4f5eed52847689c58234c081db8898
Reviewed-on: https://chromium-review.googlesource.com/709255
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507968}
Former-commit-id: 534bebdd3407d6c078beb8f37270fb237fe06c00